# nextG_universal_valve_drive_platform

./: .clang-format  .gitignore  .mxproject  CMakeLists.txt  Readme.md  nextG_universal_valve_drive_platform.ioc
.github/workflows/: build.yml  flawfinder.yml
Application/: CMakeLists.txt
Application/Inc/: app.h
Application/Src/: app.c
BSP/: CMakeLists.txt  bsp.c  bsp.h
BSP/Inc/: bsp_gpio.h  bsp_iwdg.h  bsp_status.h  bsp_timer.h
BSP/Src/: bsp_gpio.c  bsp_iwdg.c  bsp_timer.c
BoardConfig/: CMakeLists.txt
Core/Inc/: adc.h  crc.h  iwdg.h  main.h  stm32f1xx_it.h  tim.h  usart.h
Core/Src/: adc.c  crc.c  dma.c  gpio.c  iwdg.c  main.c  stm32f1xx_it.c  tim.c  usart.c
Doc/: README.md  about.md  application_development_guide.md  architecture_cmake_ci_evolution_plan.md  boardconfig_development_guide.md  bringup_examples_plan.md  bsp_development_guide.md  concept.md  layered_architecture_decision.md  module_development_guide.md  service_development_guide.md  software_architecture_valve_drive_platform.md  software_version_release_guide.md  thirdparty_management_guide.md
Module/: CMakeLists.txt
Module/Inc/: mod_indicator.h  mod_status.h  mod_systime.h  mod_watchdog.h
Module/Src/: mod_indicator.c  mod_systime.c  mod_watchdog.c
Service/: CMakeLists.txt
Service/Inc/: svc_status.h  svc_system.h  svc_watchdog.h
Service/Src/: svc_system.c  svc_watchdog.c
cmake/: starm-clang.cmake
cmake/stm32cubemx/: CMakeLists.txt
